boeffla_wl_blocker: add generic wakelock blocker driver v1.0.0
Based on ideas of FranciscoFranco's non-generic driver.

Sysfs node:

	/sys/class/misc/boeffla_wakelock_blocker/wakelock_blocker

		- list of wakelocks to be blocked, separated by semicolons

	/sys/class/misc/boeffla_wakelock_blocker/debug

		- write: 0/1 to switch off and on debug logging into dmesg
		- read:  get current driver internals

	/sys/class/misc/boeffla_wakelock_blocker/version

		- show driver version

Signed-off-by: andip71 <andreasp@gmx.de>
(cherry picked from commit 3dd02c6584a638a1ec5d606ebe62b24c7d51b6b9)

--- a/arch/arm64/configs/cepheus_user_defconfig
+++ b/arch/arm64/configs/cepheus_user_defconfig
@@ -815,3 +815,4 @@ CONFIG_NETFILTER_XT_TARGET_HL=y
 CONFIG_IP_NF_TARGET_TTL=y
 CONFIG_NETFILTER_ADVANCED=y
 CONFIG_EXTCON=y 
+CONFIG_BOEFFLA_WL_BLOCKER=y
