--- a/arch/arm64/configs/cepheus_user_defconfig
+++ b/arch/arm64/configs/cepheus_user_defconfig
@@ -712,3 +712,5 @@ CONFIG_TOUCH_COUNT_DUMP=y
 CONFIG_BOOT_INFO=y
 CONFIG_OF_FLATTREE=y
 CONFIG_SIMTRAY_STATUS=y
+CONFIG_BUILD_ARM64_DT_OVERLAY=y
+CONFIG_MODULE_FORCE_LOAD=y
