--- a/arch/arm64/configs/cepheus_user_defconfig
+++ b/arch/arm64/configs/cepheus_user_defconfig
@@ -732,3 +732,5 @@ CONFIG_OKL4_PIPE=y
 # CONFIG_QRTR_FIFO=y
 CONFIG_TRUSTY=y
 CONFIG_VCM_AK7374=y
+CONFIG_BUILD_ARM64_DT_OVERLAY=y
+CONFIG_MODULE_FORCE_LOAD=y
