--- a/arch/arm64/configs/cepheus_user_defconfig
+++ b/arch/arm64/configs/cepheus_user_defconfig
@@ -734,3 +734,7 @@ CONFIG_TRUSTY=y
 CONFIG_VCM_AK7374=y
 CONFIG_BUILD_ARM64_DT_OVERLAY=y
 CONFIG_MODULE_FORCE_LOAD=y
+CONFIG_KUSER_HELPERS=y
+CONFIG_COMPAT_VDSO=y
+CONFIG_CROSS_COMPILE_ARM32=""
+CONFIG_ARM_ARCH_TIMER_VCT_ACCESS=y
