--- a/arch/arm64/configs/cepheus_user_defconfig
+++ b/arch/arm64/configs/cepheus_user_defconfig
@@ -738,3 +738,4 @@ CONFIG_KUSER_HELPERS=y
 CONFIG_COMPAT_VDSO=y
 CONFIG_CROSS_COMPILE_ARM32=""
 CONFIG_ARM_ARCH_TIMER_VCT_ACCESS=y
+CONFIG_DYNAMIC_STUNE_BOOST=y
