defconfig: enable cpumask

--- a/arch/arm64/configs/cepheus_user_defconfig
+++ b/arch/arm64/configs/cepheus_user_defconfig
@@ -719,3 +719,6 @@ CONFIG_COMPAT_VDSO=y
 CONFIG_CROSS_COMPILE_ARM32=""
 CONFIG_ARM_ARCH_TIMER_VCT_ACCESS=y
 CONFIG_DYNAMIC_STUNE_BOOST=y
+CONFIG_LITTLE_CPU_MASK=15
+CONFIG_BIG_CPU_MASK=112
+CONFIG_PRIME_CPU_MASK=128
