--- a/arch/arm64/configs/cepheus_user_defconfig
+++ b/arch/arm64/configs/cepheus_user_defconfig
@@ -742,3 +742,4 @@ CONFIG_DYNAMIC_STUNE_BOOST=y
 CONFIG_LITTLE_CPU_MASK=15
 CONFIG_BIG_CPU_MASK=112
 CONFIG_PRIME_CPU_MASK=128
+CONFIG_INCREMENTAL_FS=y
