defconfig : enable some zram compression algorithm

--- a/arch/arm64/configs/cepheus_user_defconfig
+++ b/arch/arm64/configs/cepheus_user_defconfig
@@ -728,3 +728,14 @@ CONFIG_DEVFREQ_INPUT_BOOST_DURATION_MS=64
 CONFIG_DEVFREQ_WAKE_BOOST_DURATION_MS=1000
 CONFIG_DEVFREQ_MSM_CPUBW_BOOST_FREQ=9155
 CONFIG_DEVFREQ_MSM_LLCCBW_BOOST_FREQ=2597
+# Add LZ4 support for ZRAM compression
+CONFIG_CRYPTO_LZ4=y
+CONFIG_LZ4_COMPRESS=y
+CONFIG_LZ4_DECOMPRESS=y
+CONFIG_CRYPTO_LZ4HC=y
+CONFIG_CRYPTO_ZSTD=y
+CONFIG_ZSTD_COMPRESS=y
+CONFIG_ZSTD_DECOMPRESS=y
+CONFIG_CRYPTO_842=y
+CONFIG_842_COMPRESS=y
+CONFIG_842_DECOMPRESS=y
