--- a/drivers/block/zram/Kconfig
+++ b/drivers/block/zram/Kconfig
@@ -42,4 +42,4 @@ config ZRAM_WRITEBACK
 	 See zram.txt for more infomration.
 config ZRAM_DEFAULT_COMP_ALGORITHM
  	string "Default ZRAM algorithm"
- 	default "lzo" 
+ 	default "lz4" 
