defconfig: set WQ_POWER_EFFICIENT enabled

--- a/arch/arm64/configs/cepheus_user_defconfig
+++ b/arch/arm64/configs/cepheus_user_defconfig
@@ -742,3 +742,4 @@ CONFIG_CRYPTO_842=y
 CONFIG_842_COMPRESS=y
 CONFIG_842_DECOMPRESS=y
 CONFIG_PROCESS_RECLAIM=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
