defconfig: enable F2FS support

--- a/arch/arm64/configs/cepheus_user_defconfig
+++ b/arch/arm64/configs/cepheus_user_defconfig
@@ -743,3 +743,11 @@ CONFIG_842_COMPRESS=y
 CONFIG_842_DECOMPRESS=y
 CONFIG_PROCESS_RECLAIM=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
+# Add F2FS support once TWRP can mount the partition... fstab.qcom has to be changed as well for F2FS data partition only
+CONFIG_F2FS_FS=y
+CONFIG_F2FS_STAT_FS=y
+CONFIG_F2FS_FS_XATTR=y
+CONFIG_F2FS_FS_POSIX_ACL=y
+CONFIG_F2FS_FS_SECURITY=y
+CONFIG_F2FS_CHECK_FS=n
+CONFIG_F2FS_FS_ENCRYPTION=y
