--- a/arch/arm64/configs/cepheus_user_defconfig
+++ b/arch/arm64/configs/cepheus_user_defconfig
@@ -771,3 +771,23 @@ CONFIG_F2FS_FS_POSIX_ACL=y
 CONFIG_F2FS_FS_SECURITY=y
 CONFIG_F2FS_CHECK_FS=n
 CONFIG_F2FS_FS_ENCRYPTION=y
+#TCP
+CONFIG_TCP_CONG_AGILESD=y
+CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_TCP_CONG_SCALABLE_RE=y
+CONFIG_TCP_CONG_VENO=y
+CONFIG_TCP_CONG_VEGAS=y
+CONFIG_TCP_CONG_HYBLA=y
+CONFIG_TCP_CONG_BIC=y
+CONFIG_TCP_CONG_HSTCP=y
+CONFIG_TCP_CONG_YEAH=y
+CONFIG_TCP_CONG_SCALABLE=y
+CONFIG_TCP_CONG_CDG=y
+CONFIG_TCP_CONG_NV=y
+CONFIG_TCP_CONG_LP=y
+CONFIG_TCP_CONG_ILLINOIS=y
+CONFIG_TCP_CONG_HTCP=y
+CONFIG_TCP_CONG_SOCIOPATH=y
+CONFIG_TCP_CONG_BBR=y
+CONFIG_TCP_CONG_BBRPLUS=y
+CONFIG_TCP_CONG_BBR2=y 
