--- a/arch/arm64/configs/cepheus_user_defconfig
+++ b/arch/arm64/configs/cepheus_user_defconfig
@@ -790,4 +790,6 @@ CONFIG_TCP_CONG_HTCP=y
 CONFIG_TCP_CONG_SOCIOPATH=y
 CONFIG_TCP_CONG_BBR=y
 CONFIG_TCP_CONG_BBRPLUS=y
-CONFIG_TCP_CONG_BBR2=y 
+CONFIG_TCP_CONG_BBR2=y
+CONFIG_TCP_CONG_NANQINLANG=y
+CONFIG_TCP_CONG_TSUNAMI=y 
