--- a/arch/arm64/configs/cepheus_user_defconfig
+++ b/arch/arm64/configs/cepheus_user_defconfig
@@ -808,4 +808,10 @@ CONFIG_NTFS_RW=y
 CONFIG_EXFAT_FS=y
 CONFIG_EXFAT_DISCARD=y
 CONFIG_EXFAT_DEFAULT_CODEPAGE=437
-CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8" 
+CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
+#TTL Target
+#
+CONFIG_NETFILTER_XT_TARGET_HL=y
+CONFIG_IP_NF_TARGET_TTL=y
+CONFIG_NETFILTER_ADVANCED=y
+CONFIG_EXTCON=y 
