--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -585,6 +585,11 @@ config TEST_IRQ_REQUESTER
          interrupt handling.
 
          If in doubt, say N.
+config FORCE_FAST_CHARGE
+	bool "Force faster charge rate for USB"
+	default y
+	help
+	  This allows users to override default charge rate for USB
 
 config SIMTRAY_STATUS
 	tristate "Xiaomi SIM tray status"
