--- a/arch/arm64/configs/cepheus_user_defconfig
+++ b/arch/arm64/configs/cepheus_user_defconfig
@@ -817,3 +817,18 @@ CONFIG_NETFILTER_ADVANCED=y
 CONFIG_EXTCON=y 
 CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_KLAPSE=y
+#I/O Schedulers
+#
+CONFIG_IOSCHED_KYBER=y
+CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_SIO=y
+CONFIG_IOSCHED_MAPLE=y
+CONFIG_IOSCHED_ZEN=y
+CONFIG_IOSCHED_TRIPNDROID=y
+CONFIG_IOSCHED_ANXIETY=y
+CONFIG_DEFAULT_CFQ=y
+CONFIG_DEFAULT_IOSCHED="cfq"
+CONFIG_BFQ_SQ_GROUP_IOSCHED=y
+CONFIG_IOSCHED_BFQ_SQ=y
+CONFIG_MQ_IOSCHED_BFQ=y
+CONFIG_MQ_BFQ_GROUP_IOSCHED=y
