--- a/arch/arm64/configs/cepheus_user_defconfig
+++ b/arch/arm64/configs/cepheus_user_defconfig
@@ -832,3 +832,12 @@ CONFIG_BFQ_SQ_GROUP_IOSCHED=y
 CONFIG_IOSCHED_BFQ_SQ=y
 CONFIG_MQ_IOSCHED_BFQ=y
 CONFIG_MQ_BFQ_GROUP_IOSCHED=y
+CONFIG_CPU_FREQ_GOV_SMURFUTIL=y
+CONFIG_CPU_FREQ_GOV_NUBIAUTIL=y
+CONFIG_CPU_FREQ_GOV_REALMEUTIL=y
+CONFIG_CPU_FREQ_GOV_ALUCARDSCHED=y
+CONFIG_CPU_FREQ_GOV_SCHEDUTIL_PIXEL=y
+CONFIG_CPU_FREQ_GOV_BLU_SCHEDUTIL=y
+CONFIG_CPU_FREQ_GOV_LENUTIL=y
+CONFIG_CPU_FREQ_GOV_RENOUTIL=y
+CONFIG_CPU_FREQ_GOV_LENOVOUTIL=y
