--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -222,4 +222,5 @@ source "drivers/esoc/Kconfig"
 source "drivers/halls/Kconfig"
 
 source "drivers/trusty/Kconfig"
+source "drivers/dts_eagle/Kconfig"
 endmenu
