--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -190,3 +190,4 @@ obj-$(CONFIG_SENSORS_SSC)	+= sensors/
 obj-$(CONFIG_ESOC)              += esoc/
 obj-$(CONFIG_HALLS)		+= halls/
 obj-$(CONFIG_TRUSTY)		+= trusty/
+obj-$(CONFIG_AINUR_DTS_SW) += dts_eagle/
