--- a/arch/arm64/configs/cepheus_user_defconfig
+++ b/arch/arm64/configs/cepheus_user_defconfig
@@ -826,3 +826,5 @@ CONFIG_CPU_FREQ_GOV_BLU_SCHEDUTIL=y
 CONFIG_CPU_FREQ_GOV_LENUTIL=y
 CONFIG_CPU_FREQ_GOV_RENOUTIL=y
 CONFIG_CPU_FREQ_GOV_LENOVOUTIL=y
+CONFIG_DTS_SRS_TM=y
+CONFIG_AINUR_DTS_SW=y 
