kernel/sched: fix schedutils missing item

--- a/arch/arm64/configs/cepheus_user_defconfig
+++ b/arch/arm64/configs/cepheus_user_defconfig
@@ -833,7 +833,7 @@ CONFIG_IOSCHED_BFQ_SQ=y
 CONFIG_MQ_IOSCHED_BFQ=y
 CONFIG_MQ_BFQ_GROUP_IOSCHED=y
 CONFIG_CPU_FREQ_GOV_SMURFUTIL=y
-CONFIG_CPU_FREQ_GOV_NUBIAUTIL=y
+#CONFIG_CPU_FREQ_GOV_NUBIAUTIL is not set
 CONFIG_CPU_FREQ_GOV_REALMEUTIL=y
 CONFIG_CPU_FREQ_GOV_ALUCARDSCHED=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL_PIXEL=y
