defconfig: optimize inlining

--- a/arch/arm64/configs/cepheus_user_defconfig
+++ b/arch/arm64/configs/cepheus_user_defconfig
@@ -828,4 +828,5 @@ CONFIG_CPU_FREQ_GOV_RENOUTIL=y
 CONFIG_CPU_FREQ_GOV_LENOVOUTIL=y
 CONFIG_DTS_SRS_TM=y
 CONFIG_AINUR_DTS_SW=y
-CONFIG_WIREGUARD=y 
+CONFIG_WIREGUARD=y
+CONFIG_OPTIMIZE_INLINING=y
