defconfigs: Disable DEBUG_FS

--- a/arch/arm64/configs/cepheus_user_defconfig
+++ b/arch/arm64/configs/cepheus_user_defconfig
@@ -262,7 +262,6 @@ CONFIG_CFG80211_INTERNAL_REGDB=y
 CONFIG_RFKILL=y
 CONFIG_NFC_NQ=y
 CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
-CONFIG_REGMAP_ALLOW_WRITE_DEBUGFS=y
 CONFIG_DMA_CMA=y
 CONFIG_MHI_BUS=y
 CONFIG_MHI_QCOM=y
@@ -524,7 +523,6 @@ CONFIG_IPA_WDI_UNIFIED_API=y
 CONFIG_RMNET_IPA3=y
 CONFIG_RNDIS_IPA=y
 CONFIG_IPA3_MHI_PROXY=y
-CONFIG_IPA_UT=y
 # CONFIG_MSM_11AD is not set
 CONFIG_SEEMP_CORE=y
 CONFIG_QCOM_MDSS_PLL=y
@@ -597,7 +595,6 @@ CONFIG_QSEE_IPC_IRQ_BRIDGE=y
 CONFIG_QCOM_GLINK=y
 CONFIG_QCOM_GLINK_PKT=y
 CONFIG_QCOM_QDSS_BRIDGE=y
-CONFIG_QTI_RPM_STATS_LOG=y
 CONFIG_MSM_CDSP_LOADER=y
 CONFIG_QCOM_SMCINVOKE=y
 CONFIG_MSM_EVENT_TIMER=y
@@ -606,7 +603,6 @@ CONFIG_MSM_QBT1000=y
 CONFIG_QCOM_FSA4480_I2C=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 CONFIG_MSM_PERFORMANCE=y
-CONFIG_QMP_DEBUGFS_CLIENT=y
 CONFIG_QCOM_SMP2P_SLEEPSTATE=y
 CONFIG_QCOM_CDSP_RM=y
 CONFIG_QCOM_AOP_DDR_MESSAGING=y
@@ -661,7 +657,6 @@ CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ISO8859_1=y
 CONFIG_PRINTK_TIME=y
 CONFIG_DEBUG_INFO=y
-CONFIG_DYNAMIC_DEBUG=y
 CONFIG_PAGE_OWNER=y
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_PANIC_TIMEOUT=-1
@@ -749,7 +744,6 @@ CONFIG_PROCESS_RECLAIM=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 # Add F2FS support once TWRP can mount the partition... fstab.qcom has to be changed as well for F2FS data partition only
 CONFIG_F2FS_FS=y
-CONFIG_F2FS_STAT_FS=y
 CONFIG_F2FS_FS_XATTR=y
 CONFIG_F2FS_FS_POSIX_ACL=y
 CONFIG_F2FS_FS_SECURITY=y
@@ -830,3 +824,4 @@ CONFIG_DTS_SRS_TM=y
 CONFIG_AINUR_DTS_SW=y
 CONFIG_WIREGUARD=y
 CONFIG_OPTIMIZE_INLINING=y
+# CONFIG_DEBUG_FS is not set
