--- a/arch/arm64/configs/cepheus_user_defconfig
+++ b/arch/arm64/configs/cepheus_user_defconfig
@@ -65,7 +65,7 @@ CONFIG_PCI_MSM_MSI=y
 CONFIG_SCHED_MC=y
 CONFIG_NR_CPUS=8
 CONFIG_PREEMPT=y
-CONFIG_HZ_100=y
+CONFIG_HZ_300=y
 CONFIG_MEMORY_HOTPLUG=y
 CONFIG_MEMORY_HOTPLUG_DEFAULT_ONLINE=y
 CONFIG_MEMORY_HOTPLUG_MOVABLE_NODE=y
@@ -95,8 +95,6 @@ CONFIG_PM_WAKELOCKS_LIMIT=0
 CONFIG_CPU_IDLE=y
 CONFIG_ARM_CPUIDLE=y
 CONFIG_CPU_FREQ=y
-CONFIG_CPU_FREQ_STAT=y
-CONFIG_CPU_FREQ_TIMES=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
@@ -123,11 +121,6 @@ CONFIG_INET_ESP=y
 CONFIG_INET_IPCOMP=y
 CONFIG_INET_UDP_DIAG=y
 CONFIG_INET_DIAG_DESTROY=y
-CONFIG_TCP_CONG_ADVANCED=y
-CONFIG_TCP_CONG_CUBIC=y
-CONFIG_DEFAULT_CUBIC=y
-CONFIG_DEFAULT_TCP_CONG="cubic"
-CONFIG_TCP_CONG_BBR=y
 CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_IPV6_ROUTE_INFO=y
 CONFIG_IPV6_OPTIMISTIC_DAD=y
@@ -252,6 +245,7 @@ CONFIG_NET_ACT_SKBEDIT=y
 CONFIG_QRTR=y
 CONFIG_QRTR_SMD=y
 CONFIG_QRTR_MHI=y
+CONFIG_QRTR_FIFO=y
 CONFIG_SOCKEV_NLMCAST=y
 CONFIG_BT=y
 CONFIG_MSM_BT_POWER=y
@@ -323,11 +317,11 @@ CONFIG_KEYBOARD_GPIO=y
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_LAST_TOUCH_EVENTS=y
 CONFIG_TOUCHSCREEN_XIAOMI_TOUCHFEATURE=y
-CONFIG_TOUCHSCREEN_ST_FTS_V521=y
-CONFIG_FTS_FOD_AREA_REPORT=y
-CONFIG_TOUCHSCREEN_ST_DEBUG_FS=y
+
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_HBTP_INPUT is not set
+CONFIG_INPUT_AKM09970=y
+CONFIG_TI_DRV8846=y
 CONFIG_INPUT_QPNP_POWER_ON=y
 CONFIG_INPUT_QTI_HAPTICS=y
 CONFIG_INPUT_UINPUT=y
@@ -369,7 +363,7 @@ CONFIG_QPNP_FG_GEN4=y
 CONFIG_QPNP_SMB5=y
 CONFIG_QPNP_QNOVO5=y
 CONFIG_SMB1390_CHARGE_PUMP=y
-CONFIG_IDT_P9220=y
+#CONFIG_IDT_P9220=y
 CONFIG_THERMAL=y
 CONFIG_THERMAL_WRITABLE_TRIPS=y
 CONFIG_THERMAL_GOV_USER_SPACE=y
@@ -391,6 +385,7 @@ CONFIG_MFD_I2C_PMIC=y
 CONFIG_MFD_SPMI_PMIC=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_PROXY_CONSUMER=y
+CONFIG_REGULATOR_QPNP_AMOLED=y
 CONFIG_REGULATOR_QPNP_LCDB=y
 CONFIG_REGULATOR_REFGEN=y
 CONFIG_REGULATOR_RPMH=y
@@ -487,7 +482,7 @@ CONFIG_MMC=y
 CONFIG_MMC_PERF_PROFILING=y
 CONFIG_MMC_BLOCK_MINORS=32
 CONFIG_MMC_BLOCK_DEFERRED_RESUME=y
-CONFIG_MMC_TEST=y
+CONFIG_MMC_TEST=m
 CONFIG_MMC_PARANOID_SD_INIT=y
 CONFIG_MMC_CLKGATE=y
 CONFIG_MMC_SDHCI=y
@@ -566,8 +561,6 @@ CONFIG_QCOM_QMI_POWER_COLLAPSE=y
 CONFIG_QCOM_SMEM=y
 CONFIG_QCOM_MEMORY_DUMP_V2=y
 CONFIG_QCOM_WATCHDOG_V2=y
-CONFIG_DUMP_ALL_STACKS=y
-# CONFIG_FIRE_WATCHDOG is not set
 CONFIG_QCOM_FORCE_WDOG_BITE_ON_PANIC=y
 CONFIG_QCOM_SMP2P=y
 CONFIG_MSM_SERVICE_LOCATOR=y
@@ -714,17 +707,8 @@ CONFIG_PSTORE_CONSOLE=y
 CONFIG_PSTORE_PMSG=y
 CONFIG_CMDLINE="ramoops_memreserve=4M"
 CONFIG_CMDLINE_EXTEND=y
-CONFIG_IR_SPI=y
-CONFIG_LIRC=y
-CONFIG_RC_CORE=y
-CONFIG_RC_DECODERS=y
-CONFIG_MEDIA_RC_SUPPORT=y
-CONFIG_HAS_IOMEM=y
-CONFIG_RC_DEVICES=y
+CONFIG_TOUCHSCREEN_GOODIX_GTX8=y
+CONFIG_TOUCH_COUNT_DUMP=y
 CONFIG_BOOT_INFO=y
 CONFIG_OF_FLATTREE=y
-CONFIG_OKL4_USER_VIRQ=y
-CONFIG_OKL4_PIPE=y
-# CONFIG_QRTR_FIFO=y
-CONFIG_TRUSTY=y
-CONFIG_VCM_AK7374=y
+CONFIG_SIMTRAY_STATUS=y
